打印sql到控制台

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 mybatis.mapper-locations=classpath:mapper/*.xml
 logging.pattern.level=debug
+#控制打印sql到日志中
+#第一种：
+logging.level.com.allinfinance.ccp.mapper=debug
+#第二种：
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
